# DoRobot

./: =0.0.8  README-piper-feetech.md  README.md  VR_INTEGRATION_GUIDE.md  migration_plan.md
docs/: DISTRIBUTED_TELEOPERATION.md  Leader-Follower底座抖动分析.md  Leader-Follower底座旋转配置.md  Q-A.md  RELEASE.md  SAFETY_IMPROVEMENTS.md  ascend_ffmpeg_install.md  edge_upload.md  piper.md  卡尔曼滤波器配置说明.md  摄像头设备映射-20260205.md  数据保存问题修复总结.md  数据录制启动指南.md  数据录制错误排查指南.md  系统配置总结-20260205-最终版.md  设备配置修改指南.md
operating_platform/robot/components/arm_normal_uarm_v1/: README.md  main.py  pyproject.toml
operating_platform/robot/components/arm_normal_uarm_v1/motors/: zhonglin.py
remote_leader/: README.md  arm_driver.py  calibrate.py  leader_main.py  messages.py  requirements.txt  zenoh_publisher.py
scripts/: README_convert.md  README_end_effector_pose.md  calib_piper_ZL.py  convert_to_delivery_format.py  debug_joint_data.py  detailed_scan.py  detect_leader_joints.py  detect_usb_ports.py  diagnose_framerate.py  diagnose_joint1.py  diagnose_leader_arm.py  diagnose_noise.py  edge.sh  edge_encode.py  fix_timestamp_guide.py  fk_calculator.py  monitor_leader_arm.py  monitor_leader_joints.py  prepare_follower.py  recalibrate_joint0.py  reset_piper_arm.py  run_piper.sh  run_piper_uarm.sh  run_so101.sh  run_so101_modifications.md  run_vr_x5.sh  scan_all_motors.py  scan_all_ports.py  scan_feetech_motors.py  send_command.sh  setup_env.sh  setup_env_base.sh  show_leader_position.py  sync_leader_calibration.py  test_edge_workflow.py  test_joint0_range.py  test_leader_x5.py  test_piper_move.py  (+5 more)
(+99 files in other folders)
